tests/baselines/reference/augmentedTypesVar.errors.txt
==== tests/cases/compiler/augmentedTypesVar.ts (7 errors) ====
    // var then var
    var x1 = 1;
    var x1 = 2;
    
    // var then function
    var x2 = 1;
    function x2() { } // should be an error
             ~~
!!! augmentedTypesVar.ts(7,10): error TS2000: Duplicate identifier 'x2'. Additional locations:
!!! 	augmentedTypesVar.ts(6,5)
    
    var x3 = 1;
    var x3 = () => { } // should be an error
        ~~~~~~~~~~~~~~
!!! augmentedTypesVar.ts(10,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'x3' must be of type 'number', but here has type '() => void'.
    
    // var then class
    var x4 = 1;
    class x4 { } // error
          ~~
!!! augmentedTypesVar.ts(14,7): error TS2000: Duplicate identifier 'x4'. Additional locations:
!!! 	augmentedTypesVar.ts(13,5)
    
    var x4a = 1;
    class x4a { public foo() { } } // error
          ~~~
!!! augmentedTypesVar.ts(17,7): error TS2000: Duplicate identifier 'x4a'. Additional locations:
!!! 	augmentedTypesVar.ts(16,5)
    
    // var then enum
    var x5 = 1;
    enum x5 { One } // error
         ~~
!!! augmentedTypesVar.ts(21,6): error TS2000: Duplicate identifier 'x5'. Additional locations:
!!! 	augmentedTypesVar.ts(20,5)
    
    // var then module
    var x6 = 1;
    module x6 { } // ok since non-instantiated
    
    var x6a = 1;
    module x6a { var y = 2; } // error since instantiated
           ~~~
!!! augmentedTypesVar.ts(28,8): error TS2000: Duplicate identifier 'x6a'. Additional locations:
!!! 	augmentedTypesVar.ts(27,5)
    
    var x6b = 1;
    module x6b { export var y = 2; } // error
           ~~~
!!! augmentedTypesVar.ts(31,8): error TS2000: Duplicate identifier 'x6b'. Additional locations:
!!! 	augmentedTypesVar.ts(30,5)
    
    // var then import, messes with other error reporting
    //var x7 = 1;
    //import x7 = require('');
    